--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ languageCode = "en-us"
 title = "Hugo Cactus Theme"
 theme = "hugo-cactus-theme"
 publishDir = "docs"
+canonifyURLs = true
 # Enter your tracking code to enable Google Analytics
 googleAnalytics = ""
 # Disable comments by leaving disqusShortname empty
